proper command run and aggregation module